kubernetes/manifests/custom-nginx-pod-unsigned.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-nginx
spec:
  containers:
    - name: custom-nginx
      image: localhost:5000/custom-nginx:unsigned
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
        requests:
          memory: "64Mi"
          cpu: "250m"
